vlib/v/checker/tests/fixed_array_new_syntax_size_mismatch_err.vv
fn main() {
	_ := [2]int[1 2 3]
}
